--- a/sliderule_dsi_json_exercise.ipynb
+++ b/sliderule_dsi_json_exercise.ipynb
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50144,7 +50144,7 @@
        "  'url': 'http://www.worldbank.org/projects/P126321/kenya-national-urban-transport-improvement-project?lang=en'}]"
       ]
      },
-     "execution_count": 373,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50156,7 +50156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50167,7 +50167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50176,7 +50176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -50197,15 +50197,15 @@
        "Socialist Republic of Vietnam      17\n",
        "Republic of India                  16\n",
        "Republic of Yemen                  13\n",
-       "People's Republic of Bangladesh    12\n",
        "Kingdom of Morocco                 12\n",
+       "People's Republic of Bangladesh    12\n",
        "Nepal                              12\n",
        "Republic of Mozambique             11\n",
        "Africa                             11\n",
        "Name: countryname, dtype: int64"
       ]
      },
-     "execution_count": 376,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50220,19 +50220,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "json_df['mjtheme_namecode'][0]\n",
     "data1 =json.load((open('data/world_bank_projects.json')))\n",
-    "y = json_normalize(data1, 'mjtheme_namecode')\n",
-    "b=l=y"
+    "project_theme = json_normalize(data1, 'mjtheme_namecode')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -50260,72 +50259,139 @@
        "Name: name, dtype: int64"
       ]
      },
-     "execution_count": 378,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "print('Find the top 10 major project themes ')\n",
-    "m = y.name.value_counts(dropna=False).nlargest(13)\n",
-    "m"
+    "project_theme.name.value_counts(dropna=False).nlargest(13)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.In 2. above you will notice that some entries have only the code and the name is missing. Create a dataframe with the missing names filled in.\n",
-      "Find the top 10 major project themes \n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "Environment and natural resources management    223\n",
-       "Rural development                               202\n",
-       "Human development                               197\n",
-       "Public sector governance                        184\n",
-       "Social protection and risk management           158\n",
-       "Financial and private sector development        130\n",
-       "Social dev/gender/inclusion                     119\n",
-       "Trade and integration                            72\n",
-       "Urban development                                47\n",
-       "Economic management                              33\n",
-       "Rule of law                                      12\n",
-       "Name: name, dtype: int64"
+       "code    1499\n",
+       "name    1377\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 403,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "import numpy as np\n",
-    "l['name'].replace('', np.nan, inplace=True)\n",
-    "p= l['code']\n",
-    "q= p.to_frame(name=None)\n",
-    "y.dropna(subset=['name'], inplace=True)\n",
-    "s=y.drop_duplicates()\n",
-    "print('3.In 2. above you will notice that some entries have only the code and the name is missing. Create a dataframe with the missing names filled in.')\n",
-    "joindataframe = q.merge(s,how='left')\n",
-    "print('Find the top 10 major project themes ')\n",
-    "m = joindataframe.name.value_counts(dropna=False).nlargest(13)\n",
-    "m"
+    "project_theme['name'].replace('', np.nan, inplace=True)\n",
+    "project_theme.count()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "code    1499\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "l.to_csv('out3.csv')"
+    "#Creating 1 one column data frame with all the rows including \n",
+    "project_code= project_theme['code']\n",
+    "project_code = project_code.to_frame(name=None)\n",
+    "project_code.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "project_theme.dropna(subset=['name'], inplace=True)\n",
+    "lookup_table=project_theme.drop_duplicates()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "code    1499\n",
+       "name    1499\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joindataframe = project_code.merge(lookup_table,how='left')\n",
+    "joindataframe.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Environment and natural resources management    250\n",
+       "Rural development                               216\n",
+       "Human development                               210\n",
+       "Public sector governance                        199\n",
+       "Social protection and risk management           168\n",
+       "Financial and private sector development        146\n",
+       "Social dev/gender/inclusion                     130\n",
+       "Trade and integration                            77\n",
+       "Urban development                                50\n",
+       "Economic management                              38\n",
+       "Rule of law                                      15\n",
+       "Name: name, dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joindataframe.name.value_counts(dropna=False).nlargest(13)\n"
    ]
   },
   {
